# Carch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  design-decisions.md  examples.md  grammar.ebnf  roadmap.md  specification.md  troubleshooting.md
docs/tutorials/: advanced-types.md  ecs-patterns.md  getting-started.md  integration-guide.md
examples/: advanced.carch  basic.carch  game_entities.carch
examples/real-world/simple-game/: CMakeLists.txt  README.md  components.carch  main.cpp
fuzzing/: CMakeLists.txt  fuzz_full_pipeline.cpp  fuzz_lexer.cpp  fuzz_parser.cpp
fuzzing/corpus/: simple.carch
scripts/: benchmark.sh  install.ps1  install.sh  package.sh  run-tests.sh
src/: main.cpp
src/codegen/: cpp_generator.cpp  cpp_generator.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.cpp  ast.h  parser.cpp  parser.h
src/semantic/: type_checker.cpp  type_checker.h
tests/: codegen_tests.cpp  edge_case_tests.cpp  error_message_tests.cpp  example_compilation_tests.cpp  golden_file_tests.cpp  integration_tests.cpp  lexer_tests.cpp  parser_tests.cpp  performance_tests.cpp  semantic_tests.cpp  stress_tests.cpp
tests/golden/: advanced.h  basic.h  game_entities.h
tools/: CMakeLists.txt  carch-fmt.cpp  carch-lint.cpp  carch-validate.cpp
